--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    <div id="main"></div>
+    <div id="container"></div>
     <script src="script.js"></script>
 </body>
 </html>
