finished core function of project, mouse hover to change color and reset button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <h3 id = "title">Etch-a-Sketch</h3>
+    <div id = "reset"><button onclick = "resetFunc()">Reset</button></div>
     <div id="container"></div>
     <script src="script.js"></script>
 </body>
